Fix OSMD rendering zoom, playback exact pacing, precise SATB matching, and update network IP